# FastMatMul

./: .gitignore  CMakeLists.txt  PLAN.md  README.md  baseline_naive.csv  compare.csv  gflops_data.csv  main.cpp  plot_gflops.py  test.csv
src/: goto_matmul.cpp  goto_matmul.h  naive_matmul.cpp  naive_matmul.h
